GNOME Bugzilla – Bug 652498
Cannot read .ico file from n900 disk
Last modified: 2011-12-19 08:10:48 UTC
The Nokia N900 mass storage comes with an autorun.inf: [autorun] icon=.n900.ico And a file called .n900.ico. However this icon is not displayed correctly in gnome. "eog .n900.ico" says "invalid header" even though gimp and firefox load the file correctly. Here is a copy: http://www.msxnet.org/n900.ico Does not work on fedora 15 (x86_64)
*** Bug 660415 has been marked as a duplicate of this bug. ***
Created attachment 197812 [details] [review] ico: Skip compressed icon images * Previously we were selecting the largest icon image and then failing if it was compressed or it was somehow different than we expected. * Instead we should go back to the next largest and so on and see if there's one we can read.
The above patch fixes the issue. It's a bit bigger than you might expect because many lines got indented into a loop. I tried to keep with the (strange) code style of the io-ico.c file.
The following fix has been pushed: 9769f3d ico: Skip compressed icon images
Created attachment 203698 [details] [review] ico: Skip compressed icon images * Previously we were selecting the largest icon image and then failing if it was compressed or it was somehow different than we expected. * Instead we should go back to the next largest and so on and see if there's one we can read.
Thanks for the merge :)