ico: Skip compressed icon images

* Previously we were selecting the largest icon image and then
   failing if it was compressed or it was somehow different than
   we expected.
 * Instead we should go back to the next largest and so on and see
   if there's one we can read.

https://bugzilla.gnome.org/show_bug.cgi?id=652498